2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* sound-properties-capplet.c: (dialog_button_clicked_cb): Update
	help link to point to user-guide.xml

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* sound-properties-capplet.c: Patch to fix spacing between action 
	area and vbox of preferences dialog.

2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>

	* sound-properties.glade, sound-properties-capplet.c:  
	More fixes for ui-review bug number 99533.
	
2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-07  Calum Benson  <calum.benson@sun.com>

	* visual-bell.png:
	Replace Bill's placeholder icon before the UI freeze :)

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

Fri Jun  6 19:16:43 2003  Jonathan Blandford  <jrb@gnome.org>

	* sound-properties-capplet.c (bell_flash_to_widget),
	(bell_flash_from_widget): Use a peditor for the visual bell
	instead.

2003-06-06  Bill Haneman <bill.haneman@sun.com>

	* sound-properties.glade:
	Added page tab and UI from "visual bell" capplet
	(UI originally from Calum, except for ugly icon)

	* visual-bell.png:
	Ugly new icon which needs TLC from Calum.

	* sound-properties-capplet.c:
	Added gconf keys for visual bell feature and control of
	audio bell.
	(visual_bell_type_changed): New, called when visual bell radiobuttons
	are toggled.
	(create_dialog): 